# Linguis

./: README.md  SYNTAX.md
antlrbox/: LinguisParser.g4  antlrgen.sh
antlrbox/v1/: LinguisENUS.g4
antlrbox/v2/: antlrgen.sh  clean.sh
antlrbox/v4/: LinguisParser.g4  antlrgen.sh  gui.sh
antlrbox/v5/: antlrgen.sh  clean.sh  (+1 more)
examples/: assert.lin  functions.lin  ifelseifelseifelseif.lin  iffalse.lin  iftrue.lin  iftrueelse.lin  maths.lin  simplest.lin  test.lin
linguis/: README.md  pyproject.toml
linguis-phase1/: README.md  pyproject.toml
linguis-phase1/examples/: assert2.lin  maths.lin
linguis-phase1/src/linguis/: ast.py
linguis-phase1/src/linguis/parsers/: __init__.py
linguis-phase1/tests/: test_env.py  test_lits.py
pylinguis/: main.py  pyproject.toml
python/: README.md  prep.sh  pyproject.toml
python/src/pylinguis/: __init__.py
python/src/pylinguis/parsers/: ANTLRSupport.py  EvaluationError.py  LinguisParserBase.py  __init__.py
python/src/pylinguis/parsers/de/: __init__.py
python/src/pylinguis/parsers/enpl/: __init__.py
python/src/pylinguis/parsers/enus/: ENUSParser.py  LinguisLexer.g4  LinguisLexer.py  LinguisParser.g4  LinguisParser.interp  LinguisParser.py  LinguisParserListener.py  LinguisParserVisitor.py  __init__.py
python/src/pylinguis/parsers/fr/: .gitignore  __init__.py
python/tests/: test_enpl.py  test_enus.py  test_fr.py  test_package.py  test_pyast.py
syntax/: LinguisDELexer.g4  LinguisENPLLexer.g4  LinguisENUSLexer.g4  LinguisFRFRLexer.g4  LinguisFRLexer.g4  LinguisParser.g4  SYNTAX.md  antlrgen.sh  clean.sh  copy.sh
(+22 files in other folders)
